--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,21 @@
 body {
   background: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100%;
+}
+header > h1 {
+  color: white;
+  text-align: center;
+  font-weight: normal;
+  font-size: 50px;
+}
+
+header > p > a {
+  color: aquamarine;
+  font-size: 16px;
+  text-align: center;
+}
+video{
+  margin: 0 auto;
+  justify-items: auto;
 }
