--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
   background: black;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 100%;
+  text-align: center;
 }
 header > h1 {
   color: white;
@@ -10,12 +10,11 @@ header > h1 {
   font-size: 50px;
 }
 
-header > p > a {
+p > a {
   color: aquamarine;
   font-size: 16px;
-  text-align: center;
 }
+
 video{
-  margin: 0 auto;
-  justify-items: auto;
+
 }
