--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
 }
-header > h1 {
+h1 {
   color: white;
   text-align: center;
   font-weight: normal;
@@ -15,6 +15,13 @@ p > a {
   font-size: 16px;
 }
 
-video{
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
 
+h4 {
+  font-size: 21px;
+  color: gray;
 }
